--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,3 +8,5 @@ error.account-type-profile.not.found=No hay perfiles disponibles para esa plataf
 error.account-type-list.not.found.complete=No hay plataformas registradas en la base de datos
 error.account.not.available=Esta cuenta ya está vendida
 error.combo.not.found=No hay ningún combo registrado con esa información
+error.user.not.found=Usuario no registrado
+error.user-data.not.found=Usuario o contraseña incorrecta
