--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,3 +10,4 @@ error.account.not.available=Esta cuenta ya está vendida
 error.combo.not.found=No hay ningún combo registrado con esa información
 error.user.not.found=Usuario no registrado
 error.user-data.not.found=Usuario o contraseña incorrecta
+error.rol.not.found=Rol con id {0} no encontrado
